--- a/style.css
+++ b/style.css
@@ -1,7 +1,180 @@
 html,
 body,
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    font-family: 'Hanken Grotesk', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  main {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 720px;
+  }
+
+  .result {
+    width: 700px;
+    height: 450px;
+    display: flex;
+    border-radius: 10%;
+    flex-direction: row;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 11px -12px 144px -33px  hsla(0, 0%, 61%, 0.486);
+  }
+
+  .result .container,
+  .result .summary {
+    width: 350px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container {
+    align-items: center;
+    justify-content: space-evenly;
+    background: linear-gradient(to bottom, hsl(252,96%,62%) ,hsl(242,82%,54%));
+    border-radius: 8%;
+  }
+
+  .container .result-h2 {
+    color: hsla(0, 9%, 94%, 0.712);
+    font-weight: 700;
+  }
+
+  .container .circle,
+  .container .great {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .container .circle>h2 {
+    font-size: 54px;
+    font-weight: 700;
+    color: hsl(0, 0%, 100%);
+  }
+
+  .container .circle {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background: linear-gradient(to bottom, hsl(255,71%,46%), hsl(246,85%,57%));
+    color: hsla(0, 0%, 100%, 0.685);
+  }
+
+  .container .great {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .container .great h2 {
+    color: hsl(0, 0%, 100%);
+    font-size: 22px;
+  }
+  .container .great p {
+    margin-bottom: 15px;
+    color: hsla(0, 0%, 100%, 0.685);
+    width: 250px;
+  }
+
+  p {
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .summary {
+    padding: 0 50px;
+    justify-content: space-evenly;
+  }
+
+  .summary .scores .score {
+    align-items: center;
+    margin: 15px 0;
+    padding: 0 15px;
+    width: 100%;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 10px;
+    color: hsl(224, 30%, 27%);
+  }
+
+  .summary .scores .reaction{
+    background-color: hsla(0, 98%, 67%, 0.274);
+  }
+
+  .summary .scores .reaction h3 {
+    width: 45%;
+    display: flex;
+    justify-content: space-evenly;
+    color: hsl(0, 98%, 67%);
+  }
+
+  .summary .scores .memory {
+    background-color: hsla(39, 96%, 55%, 0.132);
+  }
+
+  .summary .scores .memory h3 {
+    color: hsl(39, 97%, 56%);
+    width: 45%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .summary .scores .verbal {
+    background-color: hsla(166, 91%, 36%, 0.174);
+  }
+
+  .summary .scores .verbal h3 {
+    color: hsl(166, 93%, 41%);
+    width: 45%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .summary .scores .visual {
+    background-color: hsla(234, 78%, 41%, 0.171);
+  }
+
+  .summary .scores .visual h3 {
+    color: hsl(234, 83%, 44%);
+    width: 45%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .summary .button {
+    width: 100%;
+    height: 55px;
+    border-radius: 25px;
+    background-color: hsl(224, 34%, 28%);
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    color: hsl(0, 0%, 100%);
+  }
+
+  .summary .button:hover,
+  .summary .button:focus {
+    background-color: hsl(241, 73%, 51%);
+  }
+
+  .attribution {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+    padding-left: 5px;
+  }
