--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body,
     width: 700px;
     height: 450px;
     display: flex;
-    border-radius: 10%;
+    border-radius: 5%;
     flex-direction: row;
     background-color: hsl(0, 0%, 100%);
     box-shadow: 11px -12px 144px -33px  hsla(0, 0%, 61%, 0.486);
@@ -185,3 +185,21 @@ body,
     color: hsl(228, 45%, 44%);
     padding-left: 5px;
   }
+  @media screen and (min-width: 375px) and (max-width: 600px){
+    main {
+      height: 100vh;
+    }
+    .result {
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      
+    }
+    .result .container,
+    .result .summary {
+      width: 100%;
+      height: 50%;
+    }
+    .container {
+      border-radius: 0 0 50px 50px;
+    }
